# Dynamic-ETF-Pool

./: .env.example  .gitignore  .gitmessage  AGENTS.md  Makefile  README.md  environment.yml  pyproject.toml
.githooks/: commit-msg
configs/: classification.json  default.json  secondary-classification.json
data/: README.md
docs/: architecture.md  data-contracts.md  development.md  etf-pool-strategy.md  git-conventions.md  pool-construction.md  roadmap.md
docs/reference/: Tushare代理说明.md  Tushare文档-ETF专题.md
src/etf_pool/: __init__.py  __main__.py  cli.py  config.py
src/etf_pool/data/: __init__.py  provider.py  storage.py  sync.py
src/etf_pool/screening/: __init__.py  classification.py  rules.py  secondary.py
tests/unit/: test_classification.py  test_config.py  test_provider.py  test_screening_rules.py  test_secondary_classification.py  test_sync.py
