[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-etf-pool"
version = "0.1.0"
description = "A data-driven framework for constructing auditable ETF pools."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "pandas>=2.1,<3",
  "tushare>=1.4,<2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pandas-stubs>=2.1",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
]

[project.scripts]
etf-pool = "etf_pool.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
